--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "ionic:build": "npm run build",
+    "ionic:serve": "npm run start"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +20,14 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@capacitor/android": "5.0.3",
+    "@capacitor/app": "5.0.2",
+    "@capacitor/cli": "5.0.3",
+    "@capacitor/core": "5.0.3",
+    "@capacitor/haptics": "5.0.2",
+    "@capacitor/keyboard": "5.0.2",
+    "@capacitor/status-bar": "5.0.2",
+    "@ionic/angular": "^6.7.4",
     "material-icons": "^1.11.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -28,6 +38,7 @@
     "@angular/cli": "~13.2.3",
     "@angular/compiler-cli": "~13.2.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
